kubernetes/5.2_lets_encrypt/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment
  namespace: my-namespace
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - image: docker.io/library/nginx:stable-alpine-slim
          name: my-container
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
